--- a/renovate.json
+++ b/renovate.json
@@ -11,6 +11,7 @@
   ],
   "platformAutomerge": true,
   "platformCommit": true,
+  "includeForks": true,
   "regexManagers": [
     {
       "fileMatch": [
