size down runner and undo brew
Signed-off-by: Austin Abro <AustinAbro321@gmail.com>

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,7 +10,7 @@ on:
 
 jobs:
   build-release:
-    runs-on: large-ubuntu-zarf-release
+    runs-on: ubuntu-latest
     permissions:
       id-token: write
       packages: write
