commment out more
Signed-off-by: Austin Abro <AustinAbro321@gmail.com>

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -41,14 +41,14 @@ jobs:
           username: dummy
           password: ${{ github.token }}
 
-      - name: "Zarf Agent: Build and Publish the Image"
-        run: |
-          cp build/zarf build/zarf-linux-amd64
-          cp build/zarf-arm build/zarf-linux-arm64
-          docker buildx build --push --platform linux/arm64/v8,linux/amd64 --tag ghcr.io/austinabro321/zarf/agent:$GITHUB_REF_NAME .
-          rm build/zarf-linux-amd64
-          rm build/zarf-linux-arm64
-          echo ZARF_AGENT_IMAGE_DIGEST=$(docker buildx imagetools inspect ghcr.io/austinabro321/zarf/agent:$GITHUB_REF_NAME --format '{{ json . }}' | jq -r .manifest.digest) >> $GITHUB_ENV
+      # - name: "Zarf Agent: Build and Publish the Image"
+      #   run: |
+      #     cp build/zarf build/zarf-linux-amd64
+      #     cp build/zarf-arm build/zarf-linux-arm64
+      #     docker buildx build --push --platform linux/arm64/v8,linux/amd64 --tag ghcr.io/austinabro321/zarf/agent:$GITHUB_REF_NAME .
+      #     rm build/zarf-linux-amd64
+      #     rm build/zarf-linux-arm64
+      #     echo ZARF_AGENT_IMAGE_DIGEST=$(docker buildx imagetools inspect ghcr.io/austinabro321/zarf/agent:$GITHUB_REF_NAME --format '{{ json . }}' | jq -r .manifest.digest) >> $GITHUB_ENV
 
       # - name: Auth with AWS
       #   uses: aws-actions/configure-aws-credentials@b47578312673ae6fa5b5096b330d9fbac3d116df # v4.2.1
@@ -64,15 +64,15 @@ jobs:
       #     COSIGN_EXPERIMENTAL: 1
 
       # Builds init packages since GoReleaser won't handle this for us
-      - name: Build init-packages For Release
-        run: |
-          make release-init-package ARCH=amd64 AGENT_IMAGE_TAG=$GITHUB_REF_NAME
-          make release-init-package ARCH=arm64 AGENT_IMAGE_TAG=$GITHUB_REF_NAME
+      # - name: Build init-packages For Release
+      #   run: |
+      #     make release-init-package ARCH=amd64 AGENT_IMAGE_TAG=v0.55.6
+      #     make release-init-package ARCH=arm64 AGENT_IMAGE_TAG=v0.55.6
 
-      - name: Publish Init Package as OCI and Skeleton
-        run: |
-          make publish-init-package ARCH=amd64 REPOSITORY_URL=ghcr.io/austinabro321/packages
-          make publish-init-package ARCH=arm64 REPOSITORY_URL=ghcr.io/austinabro321/packages
+      # - name: Publish Init Package as OCI and Skeleton
+      #   run: |
+      #     make publish-init-package ARCH=amd64 REPOSITORY_URL=ghcr.io/austinabro321/packages
+      #     make publish-init-package ARCH=arm64 REPOSITORY_URL=ghcr.io/austinabro321/packages
 
       # Upload the contents of the build directory for later stages to use
       - name: Upload build artifacts
