--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -83,7 +83,7 @@ jobs:
           retention-days: 1
 
   validate-release:
-    runs-on: large-ubuntu-zarf-release
+    runs-on: ubuntu-latest
     needs: build-release
     steps:
       # Checkout the repo and setup the tooling for this job
@@ -117,7 +117,7 @@ jobs:
         uses: ./.github/actions/save-logs
 
   create-release:
-    runs-on: large-ubuntu-zarf-release
+    runs-on: ubuntu-latest
     needs: validate-release
     environment: release
     permissions:
