--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -82,43 +82,43 @@ jobs:
           path: build/
           retention-days: 1
 
-  validate-release:
-    runs-on: ubuntu-latest
-    needs: build-release
-    steps:
-      # Checkout the repo and setup the tooling for this job
-      - name: Checkout
-        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
-        with:
-          fetch-depth: 0
+  # validate-release:
+  #   runs-on: ubuntu-latest
+  #   needs: build-release
+  #   steps:
+  #     # Checkout the repo and setup the tooling for this job
+  #     - name: Checkout
+  #       uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+  #       with:
+  #         fetch-depth: 0
 
-      - name: Download build artifacts
-        uses: actions/download-artifact@d3f86a106a0bac45b974a628896c90dbdf5c8093 # v4.3.0
-        with:
-          name: build-artifacts
-          path: build/
+  #     - name: Download build artifacts
+  #       uses: actions/download-artifact@d3f86a106a0bac45b974a628896c90dbdf5c8093 # v4.3.0
+  #       with:
+  #         name: build-artifacts
+  #         path: build/
 
-      - name: Setup golang
-        uses: actions/setup-go@d35c59abb061a4a6fb18e82ac0862c26744d6ab5 # v5.5.0
-        with:
-          go-version-file: go.mod
+  #     - name: Setup golang
+  #       uses: actions/setup-go@d35c59abb061a4a6fb18e82ac0862c26744d6ab5 # v5.5.0
+  #       with:
+  #         go-version-file: go.mod
 
-      - name: Make Zarf executable
-        run: |
-          chmod +x build/zarf
+  #     - name: Make Zarf executable
+  #       run: |
+  #         chmod +x build/zarf
 
-      # Build the example packages and run the tests
-      - name: Build examples and run tests
-        run: |
-          sudo env "PATH=$PATH" CI=true APPLIANCE_MODE=true make test-e2e ARCH=amd64
+  #     # Build the example packages and run the tests
+  #     - name: Build examples and run tests
+  #       run: |
+  #         sudo env "PATH=$PATH" CI=true APPLIANCE_MODE=true make test-e2e ARCH=amd64
 
-      - name: Save logs
-        if: always()
-        uses: ./.github/actions/save-logs
+  #     - name: Save logs
+  #       if: always()
+  #       uses: ./.github/actions/save-logs
 
   create-release:
     runs-on: ubuntu-latest
-    needs: validate-release
+    needs: build-release
     environment: release
     permissions:
       contents: write
@@ -167,14 +167,14 @@ jobs:
           echo ARCHIVES_VERSION=$(go list -f '{{.Version}}' -m github.com/mholt/archives) >> $GITHUB_ENV
           echo HELM_VERSION=$(go list -f '{{.Version}}' -m helm.sh/helm/v3) >> $GITHUB_ENV
 
-      - name: Get Brew tap repo token
-        id: brew-tap-token
-        uses: actions/create-github-app-token@df432ceedc7162793a195dd1713ff69aefc7379e # v2.0.6
-        with:
-          app-id: ${{ secrets.HOMEBREW_TAP_WORKFLOW_GITHUB_APP_ID }}
-          private-key: ${{ secrets.HOMEBREW_TAP_WORKFLOW_GITHUB_APP_SECRET }}
-          owner: defenseunicorns
-          repositories: homebrew-tap
+      # - name: Get Brew tap repo token
+      #   id: brew-tap-token
+      #   uses: actions/create-github-app-token@df432ceedc7162793a195dd1713ff69aefc7379e # v2.0.6
+      #   with:
+      #     app-id: ${{ secrets.HOMEBREW_TAP_WORKFLOW_GITHUB_APP_ID }}
+      #     private-key: ${{ secrets.HOMEBREW_TAP_WORKFLOW_GITHUB_APP_SECRET }}
+      #     owner: defenseunicorns
+      #     repositories: homebrew-tap
 
       # Create the GitHub release notes, upload artifact backups to S3, publish homebrew recipe
       - name: Run GoReleaser
