--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -1,5 +1,8 @@
 version: 2
 
+git:
+  tag_sort: -version:creatordate
+
 before:
   hooks:
     - go mod tidy
@@ -18,7 +21,7 @@ builds:
       - darwin
       # - windows
     ldflags:
-      - -s -w -X github.com/zarf-dev/zarf/src/config.CLIVersion={{.Env.TAG}}
+      - -s -w -X github.com/zarf-dev/zarf/src/config.CLIVersion={{.Tag}}
       - -X k8s.io/component-base/version.gitVersion=v{{.Env.K8S_MODULES_MAJOR_VER}}.{{.Env.K8S_MODULES_MINOR_VER}}.{{.Env.K8S_MODULES_PATCH_VER}}
       - -X k8s.io/component-base/version.gitCommit={{.FullCommit}}
       - -X k8s.io/component-base/version.buildDate={{.Date}}
@@ -38,7 +41,7 @@ builds:
 # Save the built artifacts as binaries (instead of wrapping them in a tarball)
 archives:
   - formats: [ 'binary' ]
-    name_template: "{{ .ProjectName }}_{{.Env.TAG}}_{{- title .Os }}_{{ .Arch }}"
+    name_template: "{{ .ProjectName }}_{{.Tag}}_{{- title .Os }}_{{ .Arch }}"
 
 # generate a sha256 checksum of all release artifacts
 # NOTE: We are explicitly adding the init-packages that are built prior to GoReleaser stage in the GitHub Actions workflow
@@ -52,7 +55,7 @@ checksum:
 sboms:
   - artifacts: binary
     documents:
-      - "sbom_{{ .ProjectName }}_{{.Env.TAG}}_{{- title .Os }}_{{ .Arch }}.sbom"
+      - "sbom_{{ .ProjectName }}_{{.Tag}}_{{- title .Os }}_{{ .Arch }}.sbom"
 
 snapshot:
   version_template: "{{ incpatch .Version }}-snapshot"
@@ -79,7 +82,7 @@ release:
 #       owner: defenseunicorns
 #       name: homebrew-tap
 #       token: "{{ .Env.HOMEBREW_TAP_GITHUB_TOKEN }}"
-#       branch: "{{ .ProjectName }}-{{.Env.TAG}}"
+#       branch: "{{ .ProjectName }}-{{.Tag}}"
 #       pull_request:
 #         enabled: true
 #         base:
@@ -87,7 +90,7 @@ release:
 #           owner: defenseunicorns
 #           name: homebrew-tap
 
-#     commit_msg_template: "build(release): upgrade {{ .ProjectName }} to {{.Env.TAG}}"
+#     commit_msg_template: "build(release): upgrade {{ .ProjectName }} to {{.Tag}}"
 #     homepage: "https://zarf.dev/"
 #     description: "DevSecOps for Airgap"
 
@@ -98,13 +101,13 @@ release:
 #       owner: defenseunicorns
 #       name: homebrew-tap
 #       token: "{{ .Env.HOMEBREW_TAP_GITHUB_TOKEN }}"
-#       branch: "{{ .ProjectName }}-{{.Env.TAG}}"
+#       branch: "{{ .ProjectName }}-{{.Tag}}"
 #       pull_request:
 #         enabled: true
 #         base:
 #           branch: main
 #           owner: defenseunicorns
 #           name: homebrew-tap
-#     commit_msg_template: "build(release): {{ .ProjectName }}@{{.Env.TAG}}"
+#     commit_msg_template: "build(release): {{ .ProjectName }}@{{.Tag}}"
 #     homepage: "https://zarf.dev/"
 #     description: "DevSecOps for Airgap"
